@@ -1,3 +1,8 @@
+2006-05-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_transform.c: Ensure that out-of-range lat/long values in 
+	geodetic_to_geocentric are considered transient errors.
+
 Rel. 4.5.0 2006-04-21
 -------------------------------------------------------------------------
 	
